--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Snake</h1>
+  <div class="flex-container">
+    <div class="flex-item one-box">1</div>
+    <div class="flex-item two-box">2</div>
+    <div class="flex-item three-box">3</div>
+    <div class="flex-item four-box">4</div>
+    <div class="flex-item five-box">5</div>
+    <div class="flex-item six-box">6</div>
+  </div>
 </body>
 </html>
